--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,65 @@
+aiofiles==23.1.0
+aiogram==3.1.1
+aiohttp==3.8.6
+aiosignal==1.3.1
+annotated-types==0.6.0
+ansi2html==1.9.1
+async-timeout==4.0.3
+attrs==23.1.0
+blinker==1.7.0
+certifi==2023.7.22
+charset-normalizer==3.3.1
+click==8.1.7
+contourpy==1.2.0
+cycler==0.12.1
 dash==2.14.2
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+docopt==0.6.2
+environs==9.5.0
+Flask==3.0.0
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+fonttools==4.46.0
+frozenlist==1.4.0
+idna==3.4
+importlib-metadata==7.0.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+kiwisolver==1.4.5
+magic-filter==1.0.12
+MarkupSafe==2.1.3
+marshmallow==3.20.1
+matplotlib==3.8.2
+multidict==6.0.4
+nest-asyncio==1.5.8
+numpy==1.26.1
+packaging==23.2
+panda==0.3.1
 pandas==2.1.4
+Pillow==10.1.0
+pipreqs==0.4.13
 plotly==5.18.0
-gunicorn 
+pydantic==2.3.0
+pydantic_core==2.6.3
+Pygments==2.16.1
+pygost==66.0.2
+pyparsing==3.1.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2023.3.post1
+requests==2.31.0
+retrying==1.3.4
+six==1.16.0
+SQLAlchemy==2.0.25
+tenacity==8.2.3
+typing_extensions==4.7.1
+tzdata==2023.4
+urllib3==2.1.0
+Werkzeug==3.0.1
+WTForms==3.1.2
+yarg==0.1.9
+yarl==1.9.2
+zipp==3.17.0
